# repense-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  buildspec.yml  pyproject.toml
.github/workflows/: auto-release.yml  ci.yml  publish.yml  release.yml
repenseai/aws/: secrets_manager.py
repenseai/config/: anthropic_params.py  cohere_params.py  google_params.py  groq_params.py  maritaca_params.py  meta_params.py  mistral_params.py  openai_params.py  sambanova_params.py  selection_params.py  test_models.py
repenseai/database/: db_manager.py  db_secrets.py  db_usage.py  db_users.py
repenseai/genai/: agent.py  providers.py  selector.py
repenseai/genai/api/: anthropic.py  aws.py  cohere.py  deepseek.py  google.py  groq.py  maritaca.py  meta.py  mistral.py  nvidia.py  openai.py  perplexity.py  sambanova.py  selector.py  stability.py  together.py  x.py
repenseai/genai/benchmark/core/: base_provider.py
repenseai/genai/mcp/: server.py
repenseai/genai/tasks/: api.py  api_task.py  conditional.py  function.py  function_calling_task.py  parallel.py  pipeline_task.py  workflow.py
repenseai/secrets/: base.py
repenseai/utils/: openai.py  text.py
tests/: benchmark_class.py  config.py  mcp_server_bmi.py  mcp_server_diet.py  mcp_test_server.py  test_audio.py  test_audio_models.py  test_image.py  test_json.py  test_mcp.py  test_models.py  test_parallel.py  test_speech.py  test_text.py  test_text_models.py  test_text_streaming.py  test_tool.py  test_vision.py  test_vision_models.py  test_vision_streaming.py
